ENUMIZATION (is that even a word?)...
* Machines are now enums
* More modularity! :)
* Basic Machine is now Ore-a-lyzer (WIP name)
* Removed tons of debug code
* ModuleMachine now actually acts like a module

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -7,4 +7,4 @@ tile.complexwiring.world.ore.secondary.chalcopyrite.name=Chalcopyrite Ore
 tile.complexwiring.world.ore.secondary.cassiterite.name=Cassiterite Ore
 tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
 
-tile.complexwiring.machine.basic.name=Basic Machine
+tile.complexwiring.machine.orealyzer.name=Ore-a-lyzer
