Added a description for machines, cs_CZ locale and fixed some GUI things

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -8,3 +8,5 @@ tile.complexwiring.world.ore.secondary.cassiterite.name=Cassiterite Ore
 tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
 
 tile.complexwiring.machine.orealyzer.name=Ore-a-lyzer
+tile.complexwiring.machine.orealyzer.desc=Analyze your ores!
+
