Added a very basic yours truly THE TABLET!

--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -9,3 +9,5 @@ tile.complexwiring.world.ore.secondary.argentite.name=Argentit
 
 tile.complexwiring.machine.orelyzer.name=Rudolyzér
 tile.complexwiring.machine.orelyzer.desc=Analyzuj své rudy!
+
+item.complexwiring.tablet.name=Tablet
