--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -10,3 +10,6 @@ tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
 tile.complexwiring.machine.orelyzer.name=Orelyzer
 tile.complexwiring.machine.orelyzer.desc=Analyze your ores!
 
+item.complexwiring.tablet.name=Tablet
+
+
