--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -25,4 +25,9 @@ item.complexwiring.base.ingot.tin.name=Cínový ingot
 item.complexwiring.base.ingot.silver.name=Stříbrný ingot
 item.complexwiring.base.ingot.lead.name=Olověný ingot
 
+item.complexwiring.base.dust.copper.name=Měděný prášek
+item.complexwiring.base.dust.tin.name=Cínový prášek
+item.complexwiring.base.dust.silver.name=Stříbrný prášek
+item.complexwiring.base.dust.lead.name=Olověný prášek
+
 item.complexwiring.tablet.name=Tablet
