--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -18,7 +18,7 @@ tile.complexwiring.machine.basic.orelyzer.name=Basic Orelyzer
 tile.complexwiring.machine.basic.orelyzer.desc=Analyze your ores!
 
 tile.complexwiring.machine.powered.orelyzer.name=Powered Orelyzer
-tile.complexwiring.machine.powered.orelyzer.desc=Analyze your with MJ!
+tile.complexwiring.machine.powered.orelyzer.desc=Analyze your ores with MJ!
 
 item.complexwiring.base.ingot.copper.name=Copper Ingot
 item.complexwiring.base.ingot.tin.name=Tin Ingot
