Completed the primary ores :)
(Don't think there'll be any other changes to that!)

--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -4,12 +4,17 @@ tile.complexwiring.world.ore.primary.copper.name=Měděná ruda
 tile.complexwiring.world.ore.primary.tin.name=Cínová ruda
 tile.complexwiring.world.ore.primary.silver.name=Stříbrná ruda
 tile.complexwiring.world.ore.primary.lead.name=Olověná ruda
+tile.complexwiring.world.ore.primary.aluminium.name=Hliníková ruda
+tile.complexwiring.world.ore.primary.uranium.name=Uranová ruda
+tile.complexwiring.world.ore.primary.tungsten.name=Wolframová ruda
+tile.complexwiring.world.ore.primary.titanium.name=Titanová ruda
 
 tile.complexwiring.world.ore.secondary.chalcopyrite.name=Chalkopyrit
 tile.complexwiring.world.ore.secondary.cassiterite.name=Kasiterit
 tile.complexwiring.world.ore.secondary.argentite.name=Argentit
 tile.complexwiring.world.ore.secondary.galena.name=Galenit
-tile.complexwiring.world.ore.secondary.lignite.name=Ruda lignitu
+
+tile.complexwiring.world.ore.secondary.lignite.name=Ložisko lignitu
 tile.complexwiring.world.ore.secondary.subbituminous.name=Ložisko hnědého uhlí
 tile.complexwiring.world.ore.secondary.bituminous.name=Ložisko černého uhlí
 tile.complexwiring.world.ore.secondary.anthracite.name=Ložisko antracitu
