--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -4,11 +4,16 @@ tile.complexwiring.world.ore.primary.copper.name=Copper Ore
 tile.complexwiring.world.ore.primary.tin.name=Tin Ore
 tile.complexwiring.world.ore.primary.silver.name=Silver Ore
 tile.complexwiring.world.ore.primary.lead.name=Lead Ore
+tile.complexwiring.world.ore.primary.aluminium.name=Aluminium Ore
+tile.complexwiring.world.ore.primary.uranium.name=Uranium Ore
+tile.complexwiring.world.ore.primary.tungsten.name=Tungsten Ore
+tile.complexwiring.world.ore.primary.titanium.name=Titanium Ore
 
 tile.complexwiring.world.ore.secondary.chalcopyrite.name=Chalcopyrite Ore
 tile.complexwiring.world.ore.secondary.cassiterite.name=Cassiterite Ore
 tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
 tile.complexwiring.world.ore.secondary.galena.name=Galena Ore
+
 tile.complexwiring.world.ore.secondary.lignite.name=Lignite Ore
 tile.complexwiring.world.ore.secondary.subbituminous.name=Sub-Bituminous Ore
 tile.complexwiring.world.ore.secondary.bituminous.name=Bituminous Ore
