--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -9,10 +9,56 @@ tile.complexwiring.world.ore.primary.uranium.name=Uranium Ore
 tile.complexwiring.world.ore.primary.tungsten.name=Tungsten Ore
 tile.complexwiring.world.ore.primary.titanium.name=Titanium Ore
 
+tile.complexwiring.world.ore.secondary.chalcocite.name=Chalcocite Ore
+tile.complexwiring.world.ore.secondary.bornite.name=Bornite Ore
 tile.complexwiring.world.ore.secondary.chalcopyrite.name=Chalcopyrite Ore
+tile.complexwiring.world.ore.secondary.malachite.name=Malachite Ore
+
 tile.complexwiring.world.ore.secondary.cassiterite.name=Cassiterite Ore
+tile.complexwiring.world.ore.secondary.stannite.name=Stannite Ore
+
 tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
-tile.complexwiring.world.ore.secondary.galena.name=Galena Ore
+tile.complexwiring.world.ore.secondary.chlorargyte.name=Chlorargyte Ore
+
+tile.complexwiring.world.ore.secondary.galenite.name=Galenite Ore
+tile.complexwiring.world.ore.secondary.cerussite.name=Cerussite Ore
+tile.complexwiring.world.ore.secondary.anglesite.name=Anglesite Ore
+
+tile.complexwiring.world.ore.secondary.bauxite.name=Bauxite Ore
+tile.complexwiring.world.ore.secondary.cryolite.name=Cryolite Ore
+
+tile.complexwiring.world.ore.secondary.uraninite.name=Uraninite Ore
+tile.complexwiring.world.ore.secondary.autunite.name=Autunite Ore
+
+tile.complexwiring.world.ore.secondary.wolframite.name=Wolframite Ore
+tile.complexwiring.world.ore.secondary.scheelite.name=Scheelite Ore
+
+tile.complexwiring.world.ore.secondary.ilmenite.name=Ilmenite Ore
+tile.complexwiring.world.ore.secondary.rutile.name=Rutile Ore
+
+tile.complexwiring.world.ore.secondary.calaverite.name=Calaverite Ore
+tile.complexwiring.world.ore.secondary.sylvanite.name=Sylvanite Ore
+tile.complexwiring.world.ore.secondary.puregold.name=Pure Gold Ore
+
+tile.complexwiring.world.ore.secondary.magnetite.name=Magnetite Ore
+tile.complexwiring.world.ore.secondary.hematite.name=Hematite Ore
+tile.complexwiring.world.ore.secondary.siderite.name=Siderite Ore
+tile.complexwiring.world.ore.secondary.chromite.name=Chromite Ore
+tile.complexwiring.world.ore.secondary.pentlandite.name=Pentlandite Ore
+
+tile.complexwiring.world.ore.secondary.pyrolusite.name=Pyrolusite Ore
+tile.complexwiring.world.ore.secondary.cinnabar.name=Cinnabar Ore
+tile.complexwiring.world.ore.secondary.dolomite.name=Dolomite Ore
+tile.complexwiring.world.ore.secondary.sphalerite.name=Sphalerite Ore
+tile.complexwiring.world.ore.secondary.limestone.name=Limestone Ore
+tile.complexwiring.world.ore.secondary.lime.name=Lime Ore
+tile.complexwiring.world.ore.secondary.cobaltite.name=Cobaltite Ore
+
+tile.complexwiring.world.ore.secondary.lithium.name=Lithium Ore
+
+tile.complexwiring.world.ore.secondary.lazurite.name=Lazurite Ore
+
+tile.complexwiring.world.ore.secondary.beryl.name=Beryl Ore
 
 tile.complexwiring.world.ore.secondary.lignite.name=Lignite Ore
 tile.complexwiring.world.ore.secondary.subbituminous.name=Sub-Bituminous Ore
