CZ locale for secondary ores + galenite -> galena (oops!)

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -20,7 +20,7 @@ tile.complexwiring.world.ore.secondary.stannite.name=Stannite Ore
 tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
 tile.complexwiring.world.ore.secondary.chlorargyte.name=Chlorargyte Ore
 
-tile.complexwiring.world.ore.secondary.galenite.name=Galenite Ore
+tile.complexwiring.world.ore.secondary.galena.name=Galena Ore
 tile.complexwiring.world.ore.secondary.cerussite.name=Cerussite Ore
 tile.complexwiring.world.ore.secondary.anglesite.name=Anglesite Ore
 
