--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -9,10 +9,56 @@ tile.complexwiring.world.ore.primary.uranium.name=Uranová ruda
 tile.complexwiring.world.ore.primary.tungsten.name=Wolframová ruda
 tile.complexwiring.world.ore.primary.titanium.name=Titanová ruda
 
+tile.complexwiring.world.ore.secondary.chalcocite.name=Chalcozín
+tile.complexwiring.world.ore.secondary.bornite.name=Bornit
 tile.complexwiring.world.ore.secondary.chalcopyrite.name=Chalkopyrit
+tile.complexwiring.world.ore.secondary.malachite.name=Malachit
+
 tile.complexwiring.world.ore.secondary.cassiterite.name=Kasiterit
+tile.complexwiring.world.ore.secondary.stannite.name=Stannin
+
 tile.complexwiring.world.ore.secondary.argentite.name=Argentit
+tile.complexwiring.world.ore.secondary.chlorargyrite.name=Chlorargyrit
+
 tile.complexwiring.world.ore.secondary.galena.name=Galenit
+tile.complexwiring.world.ore.secondary.cerussite.name=Cerusit
+tile.complexwiring.world.ore.secondary.anglesite.name=Anglesit
+
+tile.complexwiring.world.ore.secondary.bauxite.name=Bauxit
+tile.complexwiring.world.ore.secondary.cryolite.name=Kryolit
+
+tile.complexwiring.world.ore.secondary.uraninite.name=Uraninit
+tile.complexwiring.world.ore.secondary.autunite.name=Autunit
+
+tile.complexwiring.world.ore.secondary.wolframite.name=Wolframit
+tile.complexwiring.world.ore.secondary.scheelite.name=Scheelit
+
+tile.complexwiring.world.ore.secondary.ilmenite.name=Ilmenit
+tile.complexwiring.world.ore.secondary.rutile.name=Rutil
+
+tile.complexwiring.world.ore.secondary.calaverite.name=Calaverit
+tile.complexwiring.world.ore.secondary.sylvanite.name=Sylvanit
+tile.complexwiring.world.ore.secondary.puregold.name=Ruda čistého zlata
+
+tile.complexwiring.world.ore.secondary.magnetite.name=Magnetit
+tile.complexwiring.world.ore.secondary.hematite.name=Hematit
+tile.complexwiring.world.ore.secondary.siderite.name=Siderit
+tile.complexwiring.world.ore.secondary.chromite.name=Chromit
+tile.complexwiring.world.ore.secondary.pentlandite.name=Pentlandit
+
+tile.complexwiring.world.ore.secondary.pyrolusite.name=Burel
+tile.complexwiring.world.ore.secondary.cinnabar.name=Rumělka
+tile.complexwiring.world.ore.secondary.dolomite.name=Dolomit
+tile.complexwiring.world.ore.secondary.sphalerite.name=Sfalerit
+tile.complexwiring.world.ore.secondary.limestone.name=Vápenec
+tile.complexwiring.world.ore.secondary.lime.name=Vápno
+tile.complexwiring.world.ore.secondary.cobaltite.name=Kobaltin
+
+tile.complexwiring.world.ore.secondary.lithium.name=Ložisko lithia
+
+tile.complexwiring.world.ore.secondary.lazurite.name=Lazurit
+
+tile.complexwiring.world.ore.secondary.beryl.name=Beryl
 
 tile.complexwiring.world.ore.secondary.lignite.name=Ložisko lignitu
 tile.complexwiring.world.ore.secondary.subbituminous.name=Ložisko hnědého uhlí
