Chlorargyre > Chlorargyrite in EN lang

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -18,7 +18,7 @@ tile.complexwiring.world.ore.secondary.cassiterite.name=Cassiterite Ore
 tile.complexwiring.world.ore.secondary.stannite.name=Stannite Ore
 
 tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
-tile.complexwiring.world.ore.secondary.chlorargyte.name=Chlorargyte Ore
+tile.complexwiring.world.ore.secondary.chlorargyrite.name=Chlorargyrite Ore
 
 tile.complexwiring.world.ore.secondary.galena.name=Galena Ore
 tile.complexwiring.world.ore.secondary.cerussite.name=Cerussite Ore
