--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -11,61 +11,61 @@ tile.complexwiring.world.ore.primary.uranium.name=Uranium Ore
 tile.complexwiring.world.ore.primary.tungsten.name=Tungsten Ore
 tile.complexwiring.world.ore.primary.titanium.name=Titanium Ore
 
-tile.complexwiring.world.ore.secondary.chalcocite.name=Chalcocite Ore
-tile.complexwiring.world.ore.secondary.bornite.name=Bornite Ore
-tile.complexwiring.world.ore.secondary.chalcopyrite.name=Chalcopyrite Ore
-tile.complexwiring.world.ore.secondary.malachite.name=Malachite Ore
+tile.complexwiring.world.ore.secondary.classic.chalcocite.name=Chalcocite Ore
+tile.complexwiring.world.ore.secondary.classic.bornite.name=Bornite Ore
+tile.complexwiring.world.ore.secondary.classic.chalcopyrite.name=Chalcopyrite Ore
+tile.complexwiring.world.ore.secondary.classic.malachite.name=Malachite Ore
 
-tile.complexwiring.world.ore.secondary.cassiterite.name=Cassiterite Ore
-tile.complexwiring.world.ore.secondary.stannite.name=Stannite Ore
+tile.complexwiring.world.ore.secondary.classic.cassiterite.name=Cassiterite Ore
+tile.complexwiring.world.ore.secondary.classic.stannite.name=Stannite Ore
 
-tile.complexwiring.world.ore.secondary.argentite.name=Argentite Ore
-tile.complexwiring.world.ore.secondary.chlorargyrite.name=Chlorargyrite Ore
+tile.complexwiring.world.ore.secondary.classic.argentite.name=Argentite Ore
+tile.complexwiring.world.ore.secondary.classic.chlorargyrite.name=Chlorargyrite Ore
 
-tile.complexwiring.world.ore.secondary.galena.name=Galena Ore
-tile.complexwiring.world.ore.secondary.cerussite.name=Cerussite Ore
-tile.complexwiring.world.ore.secondary.anglesite.name=Anglesite Ore
+tile.complexwiring.world.ore.secondary.classic.galena.name=Galena Ore
+tile.complexwiring.world.ore.secondary.classic.cerussite.name=Cerussite Ore
+tile.complexwiring.world.ore.secondary.classic.anglesite.name=Anglesite Ore
 
-tile.complexwiring.world.ore.secondary.bauxite.name=Bauxite Ore
-tile.complexwiring.world.ore.secondary.cryolite.name=Cryolite Ore
+tile.complexwiring.world.ore.secondary.rare.bauxite.name=Bauxite Ore
+tile.complexwiring.world.ore.secondary.rare.cryolite.name=Cryolite Ore
 
-tile.complexwiring.world.ore.secondary.uraninite.name=Uraninite Ore
-tile.complexwiring.world.ore.secondary.autunite.name=Autunite Ore
+tile.complexwiring.world.ore.secondary.rare.uraninite.name=Uraninite Ore
+tile.complexwiring.world.ore.secondary.rare.autunite.name=Autunite Ore
 
-tile.complexwiring.world.ore.secondary.wolframite.name=Wolframite Ore
-tile.complexwiring.world.ore.secondary.scheelite.name=Scheelite Ore
+tile.complexwiring.world.ore.secondary.rare.wolframite.name=Wolframite Ore
+tile.complexwiring.world.ore.secondary.rare.scheelite.name=Scheelite Ore
 
-tile.complexwiring.world.ore.secondary.ilmenite.name=Ilmenite Ore
-tile.complexwiring.world.ore.secondary.rutile.name=Rutile Ore
+tile.complexwiring.world.ore.secondary.rare.ilmenite.name=Ilmenite Ore
+tile.complexwiring.world.ore.secondary.rare.rutile.name=Rutile Ore
 
-tile.complexwiring.world.ore.secondary.calaverite.name=Calaverite Ore
-tile.complexwiring.world.ore.secondary.sylvanite.name=Sylvanite Ore
-tile.complexwiring.world.ore.secondary.puregold.name=Pure Gold Ore
+tile.complexwiring.world.ore.secondary.rare.calaverite.name=Calaverite Ore
+tile.complexwiring.world.ore.secondary.rare.sylvanite.name=Sylvanite Ore
+tile.complexwiring.world.ore.secondary.rare.puregold.name=Pure Gold Ore
 
-tile.complexwiring.world.ore.secondary.magnetite.name=Magnetite Ore
-tile.complexwiring.world.ore.secondary.hematite.name=Hematite Ore
-tile.complexwiring.world.ore.secondary.siderite.name=Siderite Ore
-tile.complexwiring.world.ore.secondary.chromite.name=Chromite Ore
-tile.complexwiring.world.ore.secondary.pentlandite.name=Pentlandite Ore
+tile.complexwiring.world.ore.secondary.vanilla.magnetite.name=Magnetite Ore
+tile.complexwiring.world.ore.secondary.vanilla.hematite.name=Hematite Ore
+tile.complexwiring.world.ore.secondary.vanilla.siderite.name=Siderite Ore
+tile.complexwiring.world.ore.secondary.vanilla.chromite.name=Chromite Ore
+tile.complexwiring.world.ore.secondary.vanilla.pentlandite.name=Pentlandite Ore
 
-tile.complexwiring.world.ore.secondary.pyrolusite.name=Pyrolusite Ore
-tile.complexwiring.world.ore.secondary.cinnabar.name=Cinnabar Ore
-tile.complexwiring.world.ore.secondary.dolomite.name=Dolomite Ore
-tile.complexwiring.world.ore.secondary.sphalerite.name=Sphalerite Ore
-tile.complexwiring.world.ore.secondary.limestone.name=Limestone Ore
-tile.complexwiring.world.ore.secondary.lime.name=Lime Ore
-tile.complexwiring.world.ore.secondary.cobaltite.name=Cobaltite Ore
+tile.complexwiring.world.ore.secondary.vanilla.pyrolusite.name=Pyrolusite Ore
+tile.complexwiring.world.ore.secondary.vanilla.cinnabar.name=Cinnabar Ore
+tile.complexwiring.world.ore.secondary.vanilla.dolomite.name=Dolomite Ore
+tile.complexwiring.world.ore.secondary.vanilla.sphalerite.name=Sphalerite Ore
+tile.complexwiring.world.ore.secondary.vanilla.limestone.name=Limestone Ore
+tile.complexwiring.world.ore.secondary.vanilla.lime.name=Lime Ore
+tile.complexwiring.world.ore.secondary.vanilla.cobaltite.name=Cobaltite Ore
 
-tile.complexwiring.world.ore.secondary.lithium.name=Lithium Ore
+tile.complexwiring.world.ore.secondary.rare.lithium.name=Lithium Ore
 
-tile.complexwiring.world.ore.secondary.lazurite.name=Lazurite Ore
+tile.complexwiring.world.ore.secondary.rare.lazurite.name=Lazurite Ore
 
-tile.complexwiring.world.ore.secondary.beryl.name=Beryl Ore
+tile.complexwiring.world.ore.secondary.rare.beryl.name=Beryl Ore
 
-tile.complexwiring.world.ore.secondary.lignite.name=Lignite Ore
-tile.complexwiring.world.ore.secondary.subbituminous.name=Sub-Bituminous Ore
-tile.complexwiring.world.ore.secondary.bituminous.name=Bituminous Ore
-tile.complexwiring.world.ore.secondary.anthracite.name=Anthracite Ore
+tile.complexwiring.world.ore.secondary.vanilla.lignite.name=Lignite Ore
+tile.complexwiring.world.ore.secondary.vanilla.subbituminous.name=Sub-Bituminous Ore
+tile.complexwiring.world.ore.secondary.vanilla.bituminous.name=Bituminous Ore
+tile.complexwiring.world.ore.secondary.vanilla.anthracite.name=Anthracite Ore
 
 tile.complexwiring.machine.basic.orelyzer.name=Basic Orelyzer
 tile.complexwiring.machine.basic.orelyzer.desc=Analyze your ores!
