--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -67,6 +67,13 @@ tile.complexwiring.world.ore.secondary.vanilla.anthracite.name=Ložisko antracit
 
 tile.complexwiring.world.ore.decor.dolomite.name=Dolomit
 tile.complexwiring.world.ore.decor.limestone.name=Vápenec
+tile.complexwiring.world.ore.decor.arenite.name=Arenit
+tile.complexwiring.world.ore.decor.dolomitebrick.name=Dolomitová cihla
+tile.complexwiring.world.ore.decor.limestonebrick.name=Vápencová cihla
+tile.complexwiring.world.ore.decor.arenitebrick.name=Arenitová cihla
+tile.complexwiring.world.ore.decor.dolomitepaver.name=Dolomitová dlažba
+tile.complexwiring.world.ore.decor.limestonepaver.name=Vápencová dlažba
+tile.complexwiring.world.ore.decor.arenitepaver.name=Arenitová dlažba
 
 tile.complexwiring.machine.basic.orelyzer.name=Základní rudolyzér
 tile.complexwiring.machine.basic.orelyzer.desc=Analyzuj své rudy!
