--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -65,18 +65,25 @@ tile.complexwiring.world.ore.secondary.vanilla.subbituminous.name=Sub-Bituminous
 tile.complexwiring.world.ore.secondary.vanilla.bituminous.name=Bituminous Ore
 tile.complexwiring.world.ore.secondary.vanilla.anthracite.name=Anthracite Ore
 
-tile.complexwiring.world.ore.decor.dolomite.name=Dolomite
 tile.complexwiring.world.ore.decor.limestone.name=Limestone
+tile.complexwiring.world.ore.decor.dolomite.name=Dolomite
 tile.complexwiring.world.ore.decor.arenite.name=Arenite
-tile.complexwiring.world.ore.decor.dolomitebrick.name=Dolomite Brick
-tile.complexwiring.world.ore.decor.limestonebrick.name=Limestone Brick
-tile.complexwiring.world.ore.decor.arenitebrick.name=Arenite Brick
-tile.complexwiring.world.ore.decor.dolomitepaver.name=Dolomite Paver
-tile.complexwiring.world.ore.decor.limestonepaver.name=Limestone Paver
-tile.complexwiring.world.ore.decor.arenitepaver.name=Arenite Paver
-tile.complexwiring.world.ore.decor.dolomiterough.name=Rough Dolomite
+
 tile.complexwiring.world.ore.decor.limestonerough.name=Rough Limestone
+tile.complexwiring.world.ore.decor.dolomiterough.name=Rough Dolomite
 tile.complexwiring.world.ore.decor.areniterough.name=Rough Arenite
+
+tile.complexwiring.world.ore.decor.limestonebrick.name=Limestone Brick
+tile.complexwiring.world.ore.decor.dolomitebrick.name=Dolomite Brick
+tile.complexwiring.world.ore.decor.arenitebrick.name=Arenite Brick
+
+tile.complexwiring.world.ore.decor.limestonesmallbrick.name=Small Limestone Bricks
+tile.complexwiring.world.ore.decor.dolomitesmallbrick.name=Small Dolomite Bricks
+tile.complexwiring.world.ore.decor.arenitesmallbrick.name=Small Arenite Bricks
+
+tile.complexwiring.world.ore.decor.limestonedolomitemix.name=Limestone - Dolomite Mix
+tile.complexwiring.world.ore.decor.dolomitearenitebrick.name=Dolomite - Arenite Mix
+tile.complexwiring.world.ore.decor.arenitelimestonemix.name=Arenite - Limestone Mix
 
 tile.complexwiring.machine.basic.orelyzer.name=Basic Orelyzer
 tile.complexwiring.machine.basic.orelyzer.desc=Analyze your ores!
