--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -80,6 +80,8 @@ tile.complexwiring.world.ore.decor.areniterough.name=Rough Arenite
 
 tile.complexwiring.machine.basic.orelyzer.name=Basic Orelyzer
 tile.complexwiring.machine.basic.orelyzer.desc=Analyze your ores!
+tile.complexwiring.machine.basic.furnace.name=Basic Furnace
+tile.complexwiring.machine.basic.furnace.desc=Smelt your ores!
 
 tile.complexwiring.machine.powered.orelyzer.name=Powered Orelyzer
 tile.complexwiring.machine.powered.orelyzer.desc=Analyze your ores with MJ!
