--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -92,6 +92,8 @@ tile.complexwiring.machine.basic.furnace.desc=Smelt your ores!
 
 tile.complexwiring.machine.powered.orelyzer.name=Powered Orelyzer
 tile.complexwiring.machine.powered.orelyzer.desc=Analyze your ores with MJ!
+tile.complexwiring.machine.powered.furnace.name=Powered Furnace
+tile.complexwiring.machine.powered.furnace.desc=Smelt your ores with MJ!
 
 item.complexwiring.base.ingot.copper.name=Copper Ingot
 item.complexwiring.base.ingot.tin.name=Tin Ingot
