--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -65,25 +65,26 @@ tile.complexwiring.world.ore.secondary.vanilla.subbituminous.name=Ložisko hněd
 tile.complexwiring.world.ore.secondary.vanilla.bituminous.name=Ložisko černého uhlí
 tile.complexwiring.world.ore.secondary.vanilla.anthracite.name=Ložisko antracitu
 
-tile.complexwiring.world.ore.decor.limestone.name=Vápenec
-tile.complexwiring.world.ore.decor.dolomite.name=Dolomit
-tile.complexwiring.world.ore.decor.arenite.name=Arenit
+tile.complexwiring.world.decor.limestonerough.name=Hrubý vápenec
+tile.complexwiring.world.decor.dolomiterough.name=Hrubý dolomit
+tile.complexwiring.world.decor.areniterough.name=Hrubý arenit
 
-tile.complexwiring.world.ore.decor.limestonerough.name=Hrubý vápenec
-tile.complexwiring.world.ore.decor.dolomiterough.name=Hrubý dolomit
-tile.complexwiring.world.ore.decor.areniterough.name=Hrubý arenit
+tile.complexwiring.world.decor.limestone.name=Vápenec
+tile.complexwiring.world.decor.dolomite.name=Dolomit
+tile.complexwiring.world.decor.arenite.name=Arenit
+tile.complexwiring.world.decor.darkdolomite.name=Tmavý dolomit
 
-tile.complexwiring.world.ore.decor.limestonebrick.name=Vápencová cihla
-tile.complexwiring.world.ore.decor.dolomitebrick.name=Dolomitová cihla
-tile.complexwiring.world.ore.decor.arenitebrick.name=Arenitová cihla
+tile.complexwiring.world.decor.limestonebrick.name=Vápencová cihla
+tile.complexwiring.world.decor.dolomitebrick.name=Dolomitová cihla
+tile.complexwiring.world.decor.arenitebrick.name=Arenitová cihla
+tile.complexwiring.world.decor.darkdolomitebrick.name=Tmavá vápencová cihla
 
-tile.complexwiring.world.ore.decor.limestonesmallbrick.name=Vápencové cihličky
-tile.complexwiring.world.ore.decor.dolomitesmallbrick.name=Dolomitové cihličky
-tile.complexwiring.world.ore.decor.arenitesmallbrick.name=Arenitové cihličky
+tile.complexwiring.world.decor.limestonesmallbrick.name=Vápencové cihličky
+tile.complexwiring.world.decor.dolomitesmallbrick.name=Dolomitové cihličky
+tile.complexwiring.world.decor.arenitesmallbrick.name==Arenitové cihličky
+tile.complexwiring.world.decor.darkdolomitesmallbrick.name=Tmavé vápencové cihličky
 
-tile.complexwiring.world.ore.decor.limestonedolomitemix.name=Mix vápence a dolomitu
-tile.complexwiring.world.ore.decor.dolomitearenitebrick.name=Mix dolomitu a arenitu
-tile.complexwiring.world.ore.decor.arenitelimestonemix.name=Mix arenitu a vápence
+tile.complexwiring.world.decor.dolomitedarkdolomitemix.name=Mix dolomitu a tmavého dolomitu
 
 tile.complexwiring.machine.basic.orelyzer.name=Základní rudolyzér
 tile.complexwiring.machine.basic.orelyzer.desc=Analyzuj své rudy!
