I am the ALPHA - the beginning of all!
*cough* the tablet stuff *cough*

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -111,3 +111,4 @@ item.complexwiring.base.dust.silver.name=Silver Dust
 item.complexwiring.base.dust.lead.name=Leaden Dust
 
 item.complexwiring.tablet.name=Tablet
+item.complexwiring.tablet.startpaper.name=§lThe Beginning
