--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -107,3 +107,4 @@ item.complexwiring.base.dust.silver.name=Stříbrný prášek
 item.complexwiring.base.dust.lead.name=Olověný prášek
 
 item.complexwiring.tablet.name=Tablet
+item.complexwiring.tablet.startpaper.name=§lPočátek
