Needs a lot of work but the research is actually showing! :)

--- a/resources/assets/complexwiring/lang/en_US.lang
+++ b/resources/assets/complexwiring/lang/en_US.lang
@@ -113,3 +113,15 @@ item.complexwiring.base.dust.lead.name=Leaden Dust
 item.complexwiring.tablet.name=Tablet
 item.complexwiring.tablet.startpaper.name=§lThe Beginning
 item.complexwiring.tablet.guidebook.name=§lThe Guidebook
+
+research.complexwiring.research.first.name=First!
+research.complexwiring.research.first.desc=IT BEGINS!
+
+research.complexwiring.research.second.name=Second!
+research.complexwiring.research.second.desc=IT HAS BEGUN!
+
+research.complexwiring.task.solid.stone.name=Stone. Get it.
+research.complexwiring.task.solid.stone.desc=YER PEASANT, GET STONE(D).
+
+research.complexwiring.task.solid.wood.name=Chop Chop
+research.complexwiring.task.solid.wood.desc=Get. That. Wood.
