--- a/resources/assets/complexwiring/lang/cs_CZ.lang
+++ b/resources/assets/complexwiring/lang/cs_CZ.lang
@@ -65,26 +65,26 @@ tile.complexwiring.world.ore.secondary.vanilla.subbituminous.name=Ložisko hněd
 tile.complexwiring.world.ore.secondary.vanilla.bituminous.name=Ložisko černého uhlí
 tile.complexwiring.world.ore.secondary.vanilla.anthracite.name=Ložisko antracitu
 
-tile.complexwiring.world.decor.limestonerough.name=Hrubý vápenec
-tile.complexwiring.world.decor.dolomiterough.name=Hrubý dolomit
-tile.complexwiring.world.decor.areniterough.name=Hrubý arenit
+tile.complexwiring.world.decor.limestoneRough.name=Hrubý vápenec
+tile.complexwiring.world.decor.dolomiteRough.name=Hrubý dolomit
+tile.complexwiring.world.decor.areniteRough.name=Hrubý arenit
 
 tile.complexwiring.world.decor.limestone.name=Vápenec
 tile.complexwiring.world.decor.dolomite.name=Dolomit
 tile.complexwiring.world.decor.arenite.name=Arenit
-tile.complexwiring.world.decor.darkdolomite.name=Tmavý dolomit
+tile.complexwiring.world.decor.darkDolomite.name=Tmavý dolomit
 
-tile.complexwiring.world.decor.limestonebrick.name=Vápencová cihla
-tile.complexwiring.world.decor.dolomitebrick.name=Dolomitová cihla
-tile.complexwiring.world.decor.arenitebrick.name=Arenitová cihla
-tile.complexwiring.world.decor.darkdolomitebrick.name=Tmavá dolomitová cihla
+tile.complexwiring.world.decor.limestoneBrick.name=Vápencová cihla
+tile.complexwiring.world.decor.dolomiteBrick.name=Dolomitová cihla
+tile.complexwiring.world.decor.areniteBrick.name=Arenitová cihla
+tile.complexwiring.world.decor.darkDolomiteBrick.name=Tmavá dolomitová cihla
 
-tile.complexwiring.world.decor.limestonesmallbrick.name=Vápencové cihličky
-tile.complexwiring.world.decor.dolomitesmallbrick.name=Dolomitové cihličky
-tile.complexwiring.world.decor.arenitesmallbrick.name=Arenitové cihličky
-tile.complexwiring.world.decor.darkdolomitesmallbrick.name=Tmavé dolomitové cihličky
+tile.complexwiring.world.decor.limestoneSmallbrick.name=Vápencové cihličky
+tile.complexwiring.world.decor.dolomiteSmallbrick.name=Dolomitové cihličky
+tile.complexwiring.world.decor.areniteSmallbrick.name=Arenitové cihličky
+tile.complexwiring.world.decor.darkDolomiteSmallbrick.name=Tmavé dolomitové cihličky
 
-tile.complexwiring.world.decor.dolomitedarkdolomitemix.name=Mix dolomitu a tmavého dolomitu
+tile.complexwiring.world.decor.dolomiteDarkDolomiteMix.name=Mix dolomitu a tmavého dolomitu
 
 tile.complexwiring.machine.basic.orelyzer.name=Základní rudolyzér
 tile.complexwiring.machine.basic.orelyzer.desc=Analyzuj své rudy!
